--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - "4002:3000"
     volumes:
       - ./web:/app
-      # - /app/node_modules
+      - ./web/node_modules:/app/node_modules
     env_file: 
       - ./web/.env
     # environment:
