CRM folder renamed to CMS

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,19 +33,19 @@ services:
     networks: 
       - ecom-suite-network
 
-  ecom-suite-crm:
-    image: ecom-suite-crm:latest
+  ecom-suite-cms:
+    image: ecom-suite-cms:latest
     build:
-      context: ./crm
+      context: ./cms
       dockerfile: Dockerfile
-    container_name: ecom-suite-crm
+    container_name: ecom-suite-cms
     ports:
       - "4003:3000"
     volumes:
-      - ./crm:/app
-      - ./crm/node_modules:/app/node_modules
+      - ./cms:/app
+      - ./cms/node_modules:/app/node_modules
     env_file:
-      - ./web/.env
+      - ./cms/.env
     networks: 
       - ecom-suite-network
 
