--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - "4001:3000"
     volumes: 
       - ./api:/app
-      - /app/node_modules
+      - /app/node_modules # Exclude node_modules from Volume Overwrite
     env_file: 
       - ./api/.env
     networks: 
@@ -28,7 +28,7 @@ services:
       - "4002:3000"
     volumes:
       - ./web:/app
-      - /app/node_modules
+      - /app/node_modules # Exclude node_modules from Volume Overwrite
       # - ./web/node_modules:/app/node_modules
     env_file: 
       - ./web/.env
@@ -47,7 +47,7 @@ services:
       - "4003:3000"
     volumes:
       - ./cms:/app
-      - /app/node_modules
+      - /app/node_modules # Exclude node_modules from Volume Overwrite
       # - ./cms/node_modules:/app/node_modules
     env_file:
       - ./cms/.env
