--- a/api/package.json
+++ b/api/package.json
@@ -22,6 +22,7 @@
     "express": "^4.21.1",
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^8.8.3",
     "morgan": "^1.10.0",
     "passport": "^0.7.0",
